# font

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  LICENSE.txt  Makefile  README.md
.github/workflows/: build.yml
benches/: names.rs
examples/: alphabet.rs  glyph.rs
src/: axes.rs  builder.rs  case.rs  characters.rs  file.rs  flags.rs  font.rs  glyph.rs  lib.rs  macros.rs  metrics.rs  names.rs  offset.rs  properties.rs  timestamps.rs
src/file/: mod.rs  opentype.rs
src/format/: mod.rs  opentype.rs
src/format/opentype/: axis.rs  cache.rs  case.rs  character.rs  feature.rs  file.rs  font.rs  mapping.rs  metric.rs  metrics.rs  mod.rs  name.rs  postscript.rs  table.rs  truetype.rs
src/format/webtype/: font.rs  mod.rs
src/formats/: mod.rs
src/formats/opentype/: axes.rs  cache.rs  characters.rs  features.rs  font.rs  mapping.rs  metrics.rs  mod.rs  names.rs  palettes.rs  postscript.rs  tables.rs  timestamps.rs  truetype.rs
src/formats/opentype/features/: characters.rs  glyphs.rs  graph.rs  mod.rs  rules.rs  sample.rs  sequence.rs  transform.rs
src/formats/webtype/: font.rs  mod.rs
src/glyph/: builder.rs  mod.rs
tests/: axes.rs  cff.rs  cff_test.rs  characters.rs  features.rs  font.rs  glyph.rs  glyphs.rs  lib.rs  metrics.rs  names.rs  opentype_postscript.rs  opentype_truetype.rs  palettes.rs  tables.rs  test_cff.rs  test_ttf.rs  timestamps.rs  ttf.rs  webtype_truetype.rs
tests/common/: mod.rs
tests/support/: mod.rs
