[package]
name = "font"
version = "0.41.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a builder and parser of fonts."
documentation = "https://docs.rs/font"
homepage = "https://github.com/bodoni/font"
repository = "https://github.com/bodoni/font"
categories = ["parsing"]
keywords = ["font", "opentype", "typeface", "typography", "woff"]
exclude = ["tests/fixtures/*"]

[features]
default = ["webtype"]
webtype = ["dep:webtype"]

[dependencies]
opentype = { version = "0.38", features = ["default-language"] }
typeface = "0.4.3"
webtype = { version = "0.18", optional = true }
