[package]
name = "font"
version = "0.42.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a builder and parser of fonts."
documentation = "https://docs.rs/font"
homepage = "https://github.com/bodoni/font"
repository = "https://github.com/bodoni/font"
categories = ["parsing"]
keywords = ["font", "opentype", "typeface", "typography", "woff"]
exclude = ["tests/fixtures/*"]

[features]
default = ["webtype"]
webtype = ["dep:webtype"]

[dependencies]
opentype = { version = "0.39", features = ["default-language"] }
typeface = "0.5"
webtype = { version = "0.19", optional = true }
